--- a/docs-site/static/demo/features/index.html
+++ b/docs-site/static/demo/features/index.html
@@ -191,6 +191,18 @@
                     </svg>
                 </div>
             </a>
+
+            <a href="new-session.html" class="demo-card">
+                <div class="demo-card-icon">&#128279;</div>
+                <div class="demo-card-title">New Session & Invite</div>
+                <div class="demo-card-description">Walk through inviting someone, adding a topic, resending/canceling, and seeing acceptance move you into the flow.</div>
+                <div class="demo-card-cta">
+                    Try demo
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M5 12h14M12 5l7 7-7 7"/>
+                    </svg>
+                </div>
+            </a>
         </div>
 
         <div class="section-divider">
